# Contract-Intelligence-agent

./: .gitignore
backend/: .gitignore  main.py  pyproject.toml
backend/routes/: chat.py  embed.py  upload.py
backend/utils/: __init__.py  rag.py  retrival.py  summary.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: FileUpload.jsx
frontend/src/pages/: Upload.jsx
frontend/src/services/: api.js
